--- a/src/plugins/qmldesigner/components/resources/resources.qrc
+++ b/src/plugins/qmldesigner/components/resources/resources.qrc
@@ -128,5 +128,9 @@
         <file>images/tile-icon.png</file>
         <file>images/aspect-fit-icon.png</file>
         <file>images/aspect-crop-icon.png</file>
+        <file>images/tile-icon-vert-crop.png</file>
+        <file>images/tile-icon-hor-crop.png</file>
+        <file>images/tile-icon-hor - scale.png</file>
+        <file>images/tile-icon-vert-scale.png</file>
     </qresource>
 </RCC>
