QML Observer: Made toolbar and crumble path look better
Now the style is something similar to Qt Creator's default coloring.

--- a/src/libs/qmljsdebugger/editor/editor.qrc
+++ b/src/libs/qmljsdebugger/editor/editor.qrc
@@ -16,5 +16,6 @@
         <file>images/segment-hover-end.png</file>
         <file>images/segment-hover.png</file>
         <file>images/segment-selected-end.png</file>
+        <file>images/color-picker-hicontrast.png</file>
     </qresource>
 </RCC>
