--- a/src/plugins/qt4projectmanager/qt-maemo/maemopackagecreationwidget.ui
+++ b/src/plugins/qt4projectmanager/qt-maemo/maemopackagecreationwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>453</width>
-    <height>116</height>
+    <width>471</width>
+    <height>162</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -42,9 +42,6 @@
    </item>
    <item>
     <layout class="QFormLayout" name="formLayout">
-     <property name="fieldGrowthPolicy">
-      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="sizePolicy">
@@ -193,6 +190,37 @@
        </item>
       </layout>
      </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="packageManagerIconLabel">
+       <property name="text">
+        <string>&lt;b&gt;Package Manager Icon:&lt;/b&gt;</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QToolButton" name="packageManagerIconButton">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
     </layout>
    </item>
   </layout>
@@ -279,6 +307,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>packageManagerIconButton</sender>
+   <signal>clicked()</signal>
+   <receiver>MaemoPackageCreationWidget</receiver>
+   <slot>setPackageManagerIcon()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>196</x>
+     <y>136</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>2</x>
+     <y>143</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>addFile()</slot>
@@ -286,5 +330,6 @@
   <slot>handleSkipButtonToggled(bool)</slot>
   <slot>versionInfoChanged()</slot>
   <slot>editDebianFile()</slot>
+  <slot>setPackageManagerIcon()</slot>
  </slots>
 </ui>
