Debugger [CDB]: Spelling fix.

--- a/src/plugins/debugger/cdb/cdboptionspagewidget.ui
+++ b/src/plugins/debugger/cdb/cdboptionspagewidget.ui
@@ -98,7 +98,7 @@
       <item row="1" column="0">
        <widget class="QCheckBox" name="fastLoadDebuggingHelpersCheckBox">
         <property name="text">
-         <string>fast loading of debugging helpers</string>
+         <string>Fast loading of debugging helpers</string>
         </property>
        </widget>
       </item>
