--- a/share/qtcreator/qmldesigner/propertyeditor/Qt/propertyEditor.css
+++ b/share/qtcreator/qmldesigner/propertyeditor/Qt/propertyEditor.css
@@ -423,9 +423,12 @@ QMenu::separator {
  }
 
  QSlider::handle:horizontal {
-     image: url(:/qmldesigner/images/slider_indikator.png);
+     background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #b4b4b4, stop:1 #8f8f8f);
      width: 16px;
-	 height: 24px;
-     margin: 0px 0;	 
+     height: 16px;     
+     border: 1px solid #5c5c5c;
+     width: 18px;
+     margin: -4px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
+     border-radius: 3px;
  }
 
