Add a prelimary icon

--- a/src/plugins/qt4projectmanager/qt4projectmanager.qrc
+++ b/src/plugins/qt4projectmanager/qt4projectmanager.qrc
@@ -10,5 +10,6 @@
         <file>images/qt_qrc.png</file>
         <file>images/sources.png</file>
         <file>images/unknown.png</file>
+        <file>images/qml.ico</file>
     </qresource>
 </RCC>
