--- a/src/plugins/vcsbase/basecheckoutwizardpage.ui
+++ b/src/plugins/vcsbase/basecheckoutwizardpage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>464</width>
-    <height>302</height>
+    <width>483</width>
+    <height>237</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,7 +40,35 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="Utils::PathChooser" name="pathChooser"/>
+      <widget class="Utils::PathChooser" name="pathChooser" native="true"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="branchLabel">
+       <property name="text">
+        <string>Branches:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <layout class="QHBoxLayout" name="branchHorizontalLayout">
+       <item>
+        <widget class="QComboBox" name="branchComboBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="branchRefreshToolButton">
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
