Fix import of existing builds
 * Report what kind of build we have in the tooltip
 * Create only debug/release configuration for debug/release
   configured directories
 * Create debug and release configuraions for debug_and_release
   configured directories
 * Add debug_and_release to options in QMakeStep UI
 * Do not add CONFIG+=debug/release to CONFIG+=debug_and_release builds

--- a/src/plugins/qt4projectmanager/qmakestep.ui
+++ b/src/plugins/qt4projectmanager/qmakestep.ui
@@ -39,6 +39,11 @@
        <string>Release</string>
       </property>
      </item>
+     <item>
+      <property name="text">
+       <string>Debug and release</string>
+      </property>
+     </item>
     </widget>
    </item>
    <item row="1" column="0">
